--- a/src/TimerWindow.xaml
+++ b/src/TimerWindow.xaml
@@ -78,19 +78,19 @@
                                             <CroppedBitmap Source="{Binding SpellIcon.Icon}" SourceRect="{Binding Rect}" />
                                         </Image.Source>
                                     </Image>
-                                    <TextBlock HorizontalAlignment="Left" FontWeight="Bold" Text="{Binding SpellName}" Foreground="{Binding SpellNameInverseColor}" Grid.Column="1">
+                                    <TextBlock HorizontalAlignment="Left" FontWeight="Bold" Text="{Binding SpellName}" Visibility="{Binding DropShadowVisibility}" Foreground="{Binding SpellNameInverseColor}" Grid.Column="1">
                                         <TextBlock.Effect>
                                             <BlurEffect Radius="2.0" KernelType="Box"/>
                                         </TextBlock.Effect>
                                     </TextBlock>
                                     <TextBlock HorizontalAlignment="Left" FontWeight="Bold" Text="{Binding SpellName}" Foreground="{Binding SpellNameColor}" Grid.Column="1"/>
-                                    <TextBlock HorizontalAlignment="Left" FontWeight="Bold" Text="{Binding SpellExtraData}" Foreground="{Binding SpellNameInverseColor}" Grid.Column="2">
+                                    <TextBlock HorizontalAlignment="Left" FontWeight="Bold" Text="{Binding SpellExtraData}" Visibility="{Binding DropShadowVisibility}" Foreground="{Binding SpellNameInverseColor}" Grid.Column="2">
                                         <TextBlock.Effect>
                                             <BlurEffect Radius="2.0" KernelType="Box"/>
                                         </TextBlock.Effect>
                                     </TextBlock>
                                     <TextBlock HorizontalAlignment="Left" FontWeight="Bold" Text="{Binding SpellExtraData}" Foreground="{Binding SpellNameColor}" Grid.Column="2"/>
-                                    <TextBlock HorizontalAlignment="Left" FontWeight="Bold" Text="{Binding SpellExtraData2}" Foreground="{Binding SpellNameInverseColor}" Grid.Column="3">
+                                    <TextBlock HorizontalAlignment="Left" FontWeight="Bold" Text="{Binding SpellExtraData2}" Visibility="{Binding DropShadowVisibility}" Foreground="{Binding SpellNameInverseColor}" Grid.Column="3">
                                         <TextBlock.Effect>
                                             <BlurEffect Radius="2.0" KernelType="Box"/>
                                         </TextBlock.Effect>
@@ -108,7 +108,7 @@
                                         <Image Source="pack://application:,,,/Trash.png"/>
                                     </Button>
 
-                                    <TextBlock MinWidth="70" TextAlignment="Right" FontWeight="Bold" Text="{Binding SecondsLeftOnSpellPretty}" Foreground="{Binding SpellNameInverseColor}" Grid.Column="1">
+                                    <TextBlock MinWidth="70" TextAlignment="Right" FontWeight="Bold" Text="{Binding SecondsLeftOnSpellPretty}" Visibility="{Binding DropShadowVisibility}" Foreground="{Binding SpellNameInverseColor}" Grid.Column="1">
                                         <TextBlock.Effect>
                                             <BlurEffect Radius="2.0" KernelType="Box"/>
                                         </TextBlock.Effect>
