--- a/src/MappingWindow.xaml
+++ b/src/MappingWindow.xaml
@@ -70,24 +70,10 @@
                             <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="openmobinfo" ToolTip="Open Mob Info Window">
                                 <Image Source="pack://application:,,,/toolbox.png"/>
                             </Button>
-                            <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="openspells" ToolTip="Open Spell Timer Window">
-                                <Image Source="pack://application:,,,/hat.png"/>
-                            </Button>
-                            <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="OpenTimers" ToolTip="Open Timer Window">
-                                <Image Source="pack://application:,,,/clock.png"/>
-                            </Button>
-                            <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open Combo Timer Window">
+                            <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open a Timer Window" Click="Map_TimerMenu_Open">
                                 <Image Source="pack://application:,,,/combo.png"/>
                                 <Button.ContextMenu>
-                                    <ContextMenu StaysOpen="True">
-                                        <MenuItem Header="Timers" ItemsSource="{Binding Path=TimerWindows}">
-                                            <MenuItem.ItemTemplate>
-                                                <DataTemplate>
-                                                    <MenuItem Header="{Binding Title}" DataContext="{Binding ID}" Click="OpenTimerWindow"/>
-                                                </DataTemplate>
-                                            </MenuItem.ItemTemplate>
-                                        </MenuItem>
-                                    </ContextMenu>
+                                    <ContextMenu StaysOpen="True" x:Name="TimerWindowsMenu" />
                                 </Button.ContextMenu>
                             </Button>
                             <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="opendps" ToolTip="Open DPS Window">
